--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,9 @@
+file.reference.GitHub-yii=../yii
 file.reference.NetBeansProjects-yii=../yii
 file.reference.NetBeansProjects-yii-1=../../NetBeansProjects/yii
 include.path=\
     ${php.global.include.path}:\
-    ${file.reference.NetBeansProjects-yii-1}
+    ${file.reference.GitHub-yii}
 php.version=PHP_55
 source.encoding=UTF-8
 src.dir=.
